[metadata]
name = retrotype
version = 0.1.0
description = Debug and conversion tool for 1980s magazine type-in programs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbuhidar/retrotype/
project_urls = 
    Tracker = https://github.com/mbuhidar/retrotype/issues/
author = Michael Buhidar
author_email = mbuhidar@gmail.com
maintainer = Michael Buhidar
maintainer_email = mbuhidar@gmail.com
keywords = commodore64, vic20, commodore, atari, compute, ahoy, run, magazine
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = retrotype 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = retrotype

[options.entry_points]
console_scripts =
    retrotype = retrotype_cli:command_line_runner
